# sqs-dispatch.rust

./: .gitignore  Cargo.toml  LICENSE  README.md
cmd/cli/: Cargo.toml  README.md
cmd/cli/src/: main.rs
sqs-dispatch/: Cargo.toml
sqs-dispatch/src/: dispatch.rs  lib.rs  sqs.rs  util.rs
src/: main.rs
tests/: main.rs
