[package]
name = "sqs-dispatch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.101.0"
aws-sdk-sqs = "0.38.0"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.20.1", features = ["full"] }
