[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
doc = false
name = "sqs-dispatch"
path = "src/main.rs"

[dependencies]
aws-config = "0.101.0"
aws-sdk-sqs = "0.38.0"
axum-server = { version = "0.6", features = ["tls-rustls"] }
clap = { version = "4.0", features = ["derive"] }
sqs-dispatch = { path = "../../sqs-dispatch" }
tokio = { version = "1.20.1", features = ["full"] }
